--- a/index.html
+++ b/index.html
@@ -10,7 +10,107 @@
 </head>
 
 <body>
+    <div class="top">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About us</a>
+            <a href="#">Social</a>
+            <a href="#">Contact</a>
+        </nav>
+        <header>
+            <h1>Premium Quality &amp; Tradition</h1>
+            <h2>Since 1978</h2>
+        </header>
 
+    </div>
+    <main>
+        <div class="content">
+            <h1>Meet our team</h1>
+            <section class="meet-our-team">
+                <article>
+                    <img src="" alt="en bild">
+                    <h1>h1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit aspernatur corporis quis
+                        dolores
+                        iste tempora, sapiente sunt ducimus quas officiis?</p>
+                </article>
+
+                <article>
+                    <img src="" alt="en bild">
+                    <h1>h2</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eveniet expedita delectus,
+                        cupiditate tempora non minima atque voluptates soluta inventore voluptatibus perferendis.
+                    </p>
+                </article>
+
+                <article>
+                    <img src="" alt="en bild">
+                    <h1>h3</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nulla rerum dolore asperiores
+                        saepe eos libero nemo fugit tempore nobis eveniet?</p>
+                </article>
+            </section>
+
+            <section class="spinner">
+                <div class="left-arow">
+                    <a href="#">
+                        <img src="images/left-arrow.png">
+                    </a>
+                </div>
+                <div class="images">
+                    <img src="" alt="en bild">
+                    <img src="" alt="en bild">
+                    <img src="" alt="en bild">
+                    <img src="" alt="en bild">
+                </div>
+            </section>
+        </div>
+
+        <div class="contact-us">
+            <h1>Contact Us</h1>
+            <div>
+                <div class="column left-column">
+                    <input type="text" id="input-name" placeholder="Full Name">
+                    <input type="text" id="input-email" placeholder="contact@email.com">
+                    <input type="text" id="input-message" placeholder="Message">
+                    <button id="btn-send">SEND</button>
+                </div>
+                <div class="map">
+                    <img src="">
+                    <p>811 7th Avenue 53rd Street<br></p>
+                    <p>New York, 10019, United States</p>
+
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer-upper">
+            <a href="#">Home</a>
+            <a href="#">About us</a>
+            <a href="#">
+                <img src="">
+            </a>
+            <a href="#">Social</a>
+            <a href="#">Contact</a>
+        </div>
+
+        <div class="footer-lower">
+            <a href="#">
+                <img class="icon" src="">
+            </a>
+            <a href="#">
+                <img class="icon" src="">
+            </a>
+            <a href="#">
+                <img class="icon" src="">
+            </a>
+            <a href="#">
+                <img class="icon" src="">
+            </a>
+        </div>
+
+    </footer>
 </body>
 
 </html>
